Fix bug Edit menus overlapping because of z-index

--- a/style.css
+++ b/style.css
@@ -412,6 +412,9 @@ button[type="submit"]:hover{
   opacity: 1;
 }
 
+.top {
+  z-index: 40;
+}
 .done-menu {
   display:flex;
   flex-direction: column;
